Automation: set up this page on files

--- a/src/automation.html
+++ b/src/automation.html
@@ -22,111 +22,10 @@
 
         @@include('html/all-pages/headerConsultation.html',{})
 
-        <div class="page-description container">
-            <p class="page-description-text">Автоматизация и цифровизация бизнеса- это самое эффективное вложение в бизнес сегодня. В любом бизнесе сейчас собирается много данных и они открывают интересные перспективы для работы с клиентами и не только: можно совершать допродажи, сегментировать, планировать акции, менять ассортимент и прочее.Автоматизация упорядочивает, налаживает оперативную работу и управление задачами.</p>
-        </div>
-
-<!--        <div class="automation-content">-->
-        <div class="automation-advantages">
-            <div class="automation-advantages-imgBgd">
-                <div class="automation-advantages-cont container">
-                    <p class="advantages-title">Время автоматизировать процессы!</p>
-                    <div class="page-list-block">
-
-                        <p class="page-list-blueTitle">Преимущества:</p>
-
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Благодаря автоматизированным бизнес-процессам, компания работает более эффективно не менее чем на 30%.</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Снижение влияния человеческого фактора на 20%</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Автоматизация 24/7 в режиме реального времени, тем самым исключаются ошибки.</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Четкое видение результатов деятельности в цифрах,регламентирование деятельности сотрудников, а отчеты могут формироваться сами.</span>
-                        </div>
-                        <div class="page-list-item">
-                            <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                            <span class="page-list-text">Избавление от шаблонных действий (освобождается временной ресурс)</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="automation-rates">
-            <img class="automation-rates-img" src="img/automation/robot-automation.png" alt="directions"/>
-            <div class="automation-rates-cont container">
-                <div class="automation-rates-block">
-                    <p class="rates-header">Автоматизация важных бизнес-процессов может проводиться в двух направлениях:</p>
-                    <div class="rates-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <div>
-                            <p class="rates-title">Работа над основными бизнес-процессами</p>
-                            <p class="rates-text"> (общение с клиентами, управление продажами). Цель автоматизации данной сферы – повышение качества выпускаемой продукции, увеличение объема продаж, повышение доходности бизнеса.</p>
-                        </div>
-                    </div>
-                    <div class="rates-item">
-                        <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                        <div>
-                            <p class="rates-title">Упрощение поддерживающих процессов.</p>
-                            <p class="rates-text"> В качестве таких процессов может выступать бухгалтерский учет, делопроизводство, отчетность. Автоматизация этих действий не повлияет на увеличение доходов напрямую, однако поможет уменьшить время на выполнение рутинной работы.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="page-pros-container container">
-            <p class="page-pros-title">Плюсы работы с нами</p>
-
-            <div class="page-pros-items">
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Опыт более 12 лет</p>
-                    <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-qualification"  width="40" height="28">
-                        <use href="#qualification"/>
-                    </svg>
-                    <p class="pros-item-header">Квалификация сотрудников</p>
-                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-transparency" width="42" height="30">
-                        <use href="#transparency"/>
-                    </svg>
-                    <p class="pros-item-header">Максимальная прозрачность</p>
-                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Легальное, лицензионное ПО</p>
-                    <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-complex" width="38" height="40">
-                        <use href="#complex"/>
-                    </svg>
-                    <p class="pros-item-header">Индивидуальный подход</p>
-                    <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
-                </div>
-            </div>
-        </div>
-
-<!--        </div>-->
+        @@include('html/automation/automation-first-screen.html',{})
+        @@include('html/automation/automation-second-screen.html',{})
+        @@include('html/automation/automation-third-screen.html',{})
+        @@include('html/automation/automation-fourth-screen.html',{})
 
     </section>
 </main>
