--- a/src/html/automation/automation-first-screen.html
+++ b/src/html/automation/automation-first-screen.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="page-description container">
+  <p class="page-description-text">Автоматизация и цифровизация бизнеса- это самое эффективное вложение в бизнес сегодня. В любом бизнесе сейчас собирается много данных и они открывают интересные перспективы для работы с клиентами и не только: можно совершать допродажи, сегментировать, планировать акции, менять ассортимент и прочее.Автоматизация упорядочивает, налаживает оперативную работу и управление задачами.</p>
+</div>
