--- a/src/html/automation/automation-second-screen.html
+++ b/src/html/automation/automation-second-screen.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="automation-advantages">
+  <div class="automation-advantages-imgBgd">
+    <div class="automation-advantages-cont container">
+      <p class="advantages-title">Время автоматизировать процессы!</p>
+      <div class="page-list-block">
+
+        <p class="page-list-blueTitle">Преимущества:</p>
+
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">Благодаря автоматизированным бизнес-процессам, компания работает более эффективно не менее чем на 30%.</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">Снижение влияния человеческого фактора на 20%</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">Автоматизация 24/7 в режиме реального времени, тем самым исключаются ошибки.</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">Четкое видение результатов деятельности в цифрах,регламентирование деятельности сотрудников, а отчеты могут формироваться сами.</span>
+        </div>
+        <div class="page-list-item">
+          <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+          <span class="list-item-text">Избавление от шаблонных действий (освобождается временной ресурс)</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
