--- a/src/html/automation/automation-third-screen.html
+++ b/src/html/automation/automation-third-screen.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<div class="automation-rates">
+  <img class="automation-rates-img" src="img/automation/robot-automation.png" alt="directions"/>
+  <div class="automation-rates-cont container">
+    <div class="automation-rates-block">
+      <p class="rates-header">Автоматизация важных бизнес-процессов может проводиться в двух направлениях:</p>
+      <div class="rates-item">
+        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+        <div>
+          <p class="rates-title">Работа над основными бизнес-процессами</p>
+          <p class="rates-text"> (общение с клиентами, управление продажами). Цель автоматизации данной сферы – повышение качества выпускаемой продукции, увеличение объема продаж, повышение доходности бизнеса.</p>
+        </div>
+      </div>
+      <div class="rates-item">
+        <img class="list-item-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
+        <div>
+          <p class="rates-title">Упрощение поддерживающих процессов.</p>
+          <p class="rates-text"> В качестве таких процессов может выступать бухгалтерский учет, делопроизводство, отчетность. Автоматизация этих действий не повлияет на увеличение доходов напрямую, однако поможет уменьшить время на выполнение рутинной работы.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
