corrected way headerConsultation in file mobile.html. Crm-support: set up this page html on files

--- a/src/crm-support.html
+++ b/src/crm-support.html
@@ -21,58 +21,13 @@
         <p class="page-title container">Поддержка CRM</p>
 
         @@include('html/all-pages/headerConsultation.html',{})
-
-        <div class="page-description container">
-            <p class="page-description-title">Развитие CRM</p>
-            <p class="page-description-text">Порталы Битрикс24 и amoCRM имеют очень гибкий функционал, который можно настроить максимально под потребности своей компании. Важно заметить, что эти CRM изначально адаптивны к изменениям. Вы можете заказать развитие как всей компании в CRM, так и оптимизации отдельных отделов.</p>
-            <p class="page-description-text">Наша компания оказывает услуги по техническому сопровождению и развитию порталов Битрикс24 и amoCRM любого уровня сложности, независимо от того, когда и кем он был внедрен и доработан. Наша компания предоставляет гибкие тарифы по сопровождению и технической поддержке порталов. Мы позаботимся о вашей системе! Вам не придется решать вопросы производительности, обновления и изменения в связи с расширением - все это будет делать наш специалист.</p>
-        </div>
+        @@include('html/crm-support/crm-support-first-screen.html',{})
 
         <div class="crm-support-costs">
             @@include('html/all-pages/costs.html',{})
         </div>
 
-        <div class="page-pros-container container">
-            <p class="page-pros-title">Плюсы работы с нами</p>
-
-            <div class="page-pros-items">
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Опыт более 12 лет</p>
-                    <p class="pros-item-text">Опыт работы с малыми и крупным бизнесом</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-qualification"  width="40" height="28">
-                        <use href="#qualification"/>
-                    </svg>
-                    <p class="pros-item-header">Квалификация сотрудников</p>
-                    <p class="pros-item-text">Сертифицированные сотрудники с опытом работы не менее 3х лет</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-transparency" width="42" height="30">
-                        <use href="#transparency"/>
-                    </svg>
-                    <p class="pros-item-header">Максимальная прозрачность</p>
-                    <p class="pros-item-text">Вы будете в курсе всех задач и результатов</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-calendar" width="30" height="34">
-                        <use href="#calendar"/>
-                    </svg>
-                    <p class="pros-item-header">Легальное, лицензионное ПО</p>
-                    <p class="pros-item-text">Мы используем только лицензионное ПО при внедрении</p>
-                </div>
-                <div class="page-pros-item">
-                    <svg class="svg-complex" width="38" height="40">
-                        <use href="#complex"/>
-                    </svg>
-                    <p class="pros-item-header">Индивидуальный подход</p>
-                    <p class="pros-item-text">Работаем на результат с учетом всех ваших пожеланий</p>
-                </div>
-            </div>
-        </div>
+        @@include('html/crm-support/crm-support-third-screen.html',{})
 
     </section>
 </main>
