added some properties (padding top and bottom) in file pluses.scss

--- a/src/maintenance.html
+++ b/src/maintenance.html
@@ -20,6 +20,15 @@
 
         <p class="page-title container">Техническое сопровождение CRM</p>
 
+
+
+        @@include('html/automation/automation-first-screen.html',{})
+        @@include('html/automation/automation-second-screen.html',{})
+        @@include('html/automation/automation-third-screen.html',{})
+        @@include('html/automation/automation-fourth-screen.html',{})
+
+
+
         <div class="page-header">
             <button class="page-blueBtn">Нужно сопровождение
                 <img class="page-blueBtn-arrow" src="@img/icons/icons.svg#arrowWhite" alt="arrow"/>
