--- a/src/cases.html
+++ b/src/cases.html
@@ -22,63 +22,14 @@
 
         <div class="cases-content">
 
-            <div class="cases-content-item cases-content-item1">
-                <div class="content-item-block">
-                    <img class="content-item1-logo" src="img/cases/logo1.png" alt="logo1"/>
-                    <p class="content-item-title">Многопрофильный медицинский центр имени Святослава Федорова в Москве</p>
-                    <a href="#">
-                    <button class="details-btn">Подронее<span class="details-btn-btnVector">  &gt;</span></button>
-                    </a>
-                </div>
-<!--                <img class="content-item1-img" src="img/cases/image1.png" alt="image1"/>-->
-            </div>
+            @@include('html/cases/cases-first-screen.html',{})
+            @@include('html/cases/cases-second-screen.html',{})
+            @@include('html/cases/cases-third-screen.html',{})
+            @@include('html/cases/cases-fourth-screen.html',{})
+            @@include('html/cases/cases-fifth-screen.html',{})
+            @@include('html/cases/cases-sixth-screen.html',{})
 
-            <div class="cases-content-item cases-content-item2">
-                <div class="content-item-block">
-                    <img class="content-item2-logo" src="img/cases/logo2.png" alt="logo2"/>
-                    <p>Интернет-магазин програмного обеспечения.</p>
-                    <button class="details-btn">Подронее<span class="details-btn-btnVector">  &gt;</span></button>
-                </div>
-<!--                <img class="content-item2-img2" src="img/cases/image2.png" alt="image2"/>-->
-<!--                <img class="content-item2-img3" src="img/cases/image3.png" alt="image3"/>-->
-            </div>
-
-            <div class="cases-content-item cases-content-item3">
-                <div class="content-item-block">
-                    <img class="content-item3-logo" src="img/cases/logo3.png" alt="logo3"/>
-                    <p>Группа компаний по производству сельскохозяйственной продукции</p>
-                    <button class="details-btn details-btn3">Подронее<span class="details-btn-btnVector">  &gt;</span></button>
-                </div>
-<!--                <img class="content-item3-img4" src="img/cases/image4.png" alt="image4"/>-->
-            </div>
-
-            <div class="cases-content-item cases-content-item4">
-                <div class="content-item-block">
-                    <img class="content-item4-logo" src="img/cases/logo4.png" alt="logo4"/>
-                    <p class="content-item-title">Семейный развлекательный центр Нижневартовска</p>
-                    <button class="details-btn">Подронее<span class="details-btn-btnVector">  &gt;</span></button>
-                </div>
-<!--                <img class="content-item4-img" src="img/cases/image6.png" alt="image6"/>-->
-            </div>
-
-            <div class="cases-content-item cases-content-item5">
-                <div class="content-item-block">
-                    <img class="content-item5-logo" src="img/cases/logo5.png" alt="logo5"/>
-                    <p class="content-item-title">Сайт клиники по диагностике и лечению катаракты</p>
-                    <a href="project.html">
-                    <button class="details-btn">Подронее<span class="details-btn-btnVector">  &gt;</span></button>
-                    </a>
-                </div>
-<!--                <img class="content-item5-img" src="img/cases/image7.png" alt="image7"/>-->
-            </div>
         </div>
-
-        <button class="page-showMore">
-            <div class="page-showMore-vector">
-                <span class="page-showMore-arrow">  &gt;</span>
-            </div>
-<!--            <img class="page-showMore-arrow" src="@img/icons/icons.svg#shapeMore" alt="shape"/>-->
-        </button>
 
     </section>
 </main>
