--- a/src/blog.html
+++ b/src/blog.html
@@ -21,131 +21,31 @@
         <p class="page-title">Блог</p>
 
         <div class="blog-content">
-            <div class="blog-content-bigNews">
-                <a href="optimization.html">
-                    <img class="content-bigNews-img" src="img/blog/byaspro.png" alt="byaspro"/>
 
-                <div class="content-bigNews-label">
-                    <p class="blog-content-text">Лучшие сайты августа в #poweredbyaspro</p>
-                    <p class="blog-content-data">2 августа 2022</p>
-                </div>
-                </a>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
+            @@include('html/blog/blog-bigNews.html',{})
 
-                <div class="blog-content-label">
-                     <p class="blog-content-text">1=3. Аудит маркетинга и аналитика бизнес-процессов в подарок к любой услуге</p>
-                     <p class="blog-content-data">1 августа 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
+            @@include('html/blog/blog-content-item-gift.html',{})
+            @@include('html/blog/blog-content-item-gift.html',{})
 
-                <div class="blog-content-label">
-                     <p class="blog-content-text">1=3. Аудит маркетинга и аналитика бизнес-процессов в подарок к любой услуге</p>
-                     <p class="blog-content-data">1 августа 2022</p>
-                </div>
-            </div>
+            @@include('html/blog/blog-content-item-discount.html',{})
 
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/discount.png" alt="discount"/>
+            @@include('html/blog/blog-content-item-tenchat.html',{})
 
-                <div class="blog-content-label">
-                    <p class="blog-content-text">Все дороги ведут в онлайн. Скидка 15% на готовые решения</p>
-                    <p class="blog-content-data">30 июля 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/tenchat.png" alt="tenchat"/>
+            @@include('html/blog/blog-content-item-upgrade.html',{})
+            @@include('html/blog/blog-content-item-upgrade.html',{})
 
-                <div class="blog-content-label">
-                    <p class="blog-content-text">Что за социальная сеть этот ваш TenChat?</p>
-                    <p class="blog-content-data">29 июля 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
+            @@include('html/blog/blog-content-item-gift.html',{})
+            @@include('html/blog/blog-content-item-gift.html',{})
+            @@include('html/blog/blog-content-item-gift.html',{})
+            @@include('html/blog/blog-content-item-gift.html',{})
 
-                <div class="blog-content-label">
-                    <p class="blog-content-text">5 новинок из Идейного Центра — большой апгрейд</p>
-                    <p class="blog-content-data">28 июля 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
+            @@include('html/blog/blog-content-item-discount.html',{})
 
-                <div class="blog-content-label">
-                    <p class="blog-content-text">5 новинок из Идейного Центра — большой апгрейд</p>
-                    <p class="blog-content-data">28 июля 2022</p>
-                </div>
-            </div>
+            @@include('html/blog/blog-content-item-tenchat.html',{})
 
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
+            @@include('html/blog/blog-content-item-upgrade.html',{})
+            @@include('html/blog/blog-content-item-upgrade.html',{})
 
-                <div class="blog-content-label">
-                    <p class="blog-content-text">1=3. Аудит маркетинга и аналитика бизнес-процессов в подарок к любой услуге</p>
-                    <p class="blog-content-data">1 августа 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
-
-                <div class="blog-content-label">
-                    <p class="blog-content-text">1=3. Аудит маркетинга и аналитика бизнес-процессов в подарок к любой услуге</p>
-                    <p class="blog-content-data">1 августа 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
-
-                <div class="blog-content-label">
-                    <p class="blog-content-text">1=3. Аудит маркетинга и аналитика бизнес-процессов в подарок к любой услуге</p>
-                    <p class="blog-content-data">1 августа 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
-
-                <div class="blog-content-label">
-                    <p class="blog-content-text">1=3. Аудит маркетинга и аналитика бизнес-процессов в подарок к любой услуге</p>
-                    <p class="blog-content-data">1 августа 2022</p>
-                </div>
-            </div>
-
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/discount.png" alt="discount"/>
-
-                <div class="blog-content-label">
-                    <p class="blog-content-text">Все дороги ведут в онлайн. Скидка 15% на готовые решения</p>
-                    <p class="blog-content-data">30 июля 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/tenchat.png" alt="tenchat"/>
-
-                <div class="blog-content-label">
-                    <p class="blog-content-text">Что за социальная сеть этот ваш TenChat?</p>
-                    <p class="blog-content-data">29 июля 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
-
-                <div class="blog-content-label">
-                    <p class="blog-content-text">5 новинок из Идейного Центра — большой апгрейд</p>
-                    <p class="blog-content-data">28 июля 2022</p>
-                </div>
-            </div>
-            <div class="blog-content-item">
-                <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
-
-                <div class="blog-content-label">
-                    <p class="blog-content-text">5 новинок из Идейного Центра — большой апгрейд</p>
-                    <p class="blog-content-data">28 июля 2022</p>
-                </div>
-            </div>
         </div>
 
         @@include('html/all-pages/showMore.html',{})
