--- a/src/optimization.html
+++ b/src/optimization.html
@@ -19,187 +19,29 @@
         })
 
         <div class="optimization-container container">
+
             <div class="desktop">
-                <aside class="optimization-nav-block">
-                    <div class="optimization-nav">
-                        <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text"><a href="#whatIsIt">«Оптимизировать карточку»: что это значит</a></span>
-                    </div>
-                    <div class="optimization-nav">
-                        <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text"><a href="#algorithm">Специальный алгоритм</a></span>
-                    </div>
-                    <div class="optimization-nav">
-                        <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text"><a href="#intent">Интент запроса</a></span>
-                    </div>
-                    <div class="optimization-nav">
-                        <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text"><a href="#whatDoes">Что дает грамотно оптимизированная карточка</a></span>
-                    </div>
-                    <div class="optimization-nav">
-                        <img class="optimization-nav-img" src="@img/icons/icons.svg#arrowBlue" alt="shape"/>
-                        <span class="optimization-nav-text"><a href="#seo">SEO-заполнение карточки товара</a></span>
-                    </div>
-                </aside>
+                @@include('html/optimization/optimization-nav-block.html',{})
 
                 @@include('html/all-pages/connectionBlock.html',{})
             </div>
 
             <div class="optimization-content">
-                <div class="optimization-content-img">
-<!--                    <img src="img/optimization/product-item.png" alt="product-item"/>-->
-                </div>
 
-                <div class="page-description">
-                    <p class="page-description-title">Как оптимизировать карточку товара для поиска</p>
-                    <p class="page-description-text">Товарные карточки — основной тип страниц в интернет-магазине, от которых зависит эффективность торговли. Задача карточки — комфортная и прозрачная для пользователя покупка, поэтому каждый элемент структуры здесь имеет значение.</p>
-                    <p class="page-description-text">Но не только четкая структура делает товарную карточку эффективным инструментом продаж. Необходимо понравиться поисковым системам, чтобы они высоко ранжировали ваши страницы по релевантным коммерческим запросам. Для этого нужна SEO-оптимизация карточки товара, что это такое и как ее провести, мы расскажем в этой статье.</p>
-                </div>
+                @@include('html/optimization/optimization-description.html',{})
 
-                <div class="optimization-content-main">
+                @@include('html/optimization/optimization-content-first-screen.html',{})
 
-                    <a name="whatIsIt"></a>
-                    <div class="content-main-optimization">
-                        <img class="optimization-logo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
-                        <p class="main-optimization-title">«Оптимизировать карточку»: что это значит</p>
-                    </div>
+                @@include('html/optimization/optimization-content-second-screen.html',{})
 
-                    <img class="main-optimization-img" src="img/optimization/image%2011.png" alt="image"/>
-                    <p class="page-description-text">SEO (Search Engine Optimization) — это оптимизация контента под требования поисковых систем. Существует целый ряд параметров, по которым поисковик определяет качественный сайт с релевантной страницей, которую не грех вывести на первые строчки поисковой выдачи. Интернет-магазинам тоже необходимо SEO для привлечения трафика из поисковых систем и повышения качества пользовательского опыта.</p>
+                @@include('html/optimization/optimization-content-third-screen.html',{})
 
-                    <div class="main-optimization-block">
-                        <a name="algorithm"></a>
-                        <img class="optimization-miniLogo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
-                        <p class="main-optimization-subtitle">Специальный алгоритм</p>
-                    </div>
+                @@include('html/optimization/optimization-back.html',{})
 
-                    <p class="page-description-text">Чтобы понять, как работает SEO, нужно знать алгоритмы работы поисковиков. Когда пользователь хочет найти товар в интернете, он формулирует свой запрос и вводит его в поисковую строку Яндекса, Google или маркетплейса. Алгоритмы системы обрабатывают фразу и ищут в своей базе данных наиболее релевантный и качественный ответ. Свой анализ они проводят на основе ключевых слов, которые помогают роботам понять, что именно ищет пользователь и какой у его запроса интент.</p>
-
-                    <a name="intent"></a>
-                    <div class="main-optimization-block">
-                        <img class="optimization-miniLogo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
-                        <p class="main-optimization-subtitle">Интент запроса</p>
-                    </div>
-
-                    <img class="main-optimization-img" src="img/optimization/image%2012.png" alt="image"/>
-                    <p class="page-description-text">Интент — это намерение, посыл, с которым человек обращается к поисковой системе. У запроса с одним и тем же основным ключом интенты могут отличаться. Сравните: «яичная маска для волос в домашних условиях» и «купить яичную маску для волос фирмы “Заря”». Интенты этих двух запросов различаются, поэтому и результаты поисковой выдачи будут разными.</p>
-                    <p class="page-description-text">Чем выше поисковик оценит качество и релевантность карточки товара, тем выше ее ранжирование. А пользователи охотнее переходят по ссылкам в первых строчках топа выдачи. Чтобы карточка выпадала в первой десятке, ее необходимо оптимизировать: подстроиться под требования поисковиков.</p>
-                </div>
-
-                <a name="whatDoes"></a>
-                <div class="optimization-content-main">
-                    <div class="content-main-optimization">
-                        <img class="optimization-logo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
-                        <p class="main-optimization-title">Что дает грамотно оптимизированная карточка</p>
-                    </div>
-
-                    <div class="page-list-block">
-                        <p class="page-list-title">Смело можно утверждать, что SEO карточки товара — это решение сразу нескольких задач, актуальных для владельца интернет-магазина:</p>
-                        <div class="page-list-list">
-                            <div class="page-list-item">
-                                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                <span class="page-list-text">повышение позиций сайта в поисковой выдаче;</span>
-                            </div>
-                            <div class="page-list-item">
-                                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                <span class="page-list-text">привлечение целевого трафика;</span>
-                            </div>
-                            <div class="page-list-item">
-                                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                <span class="page-list-text">снижение количества отказов, которые плохо сказываются на поведенческих факторах;</span>
-                            </div>
-                            <div class="page-list-item">
-                                <img class="page-list-img" src="@img/icons/icons.svg#resize-horizontal-round" alt="resize"/>
-                                <span class="page-list-text">рост конверсии и продаж.</span>
-                            </div>
-                        </div>
-
-                        <p class="page-list-title">Пункты цифрами:</p>
-                        <div class="page-list-list">
-<!--                            <img class="optimization-numbers" src="img/optimization/numbers.svg" alt="numbers"/>-->
-                            <div class="page-list-item">
-                                <p class="page-list-number">1</p>
-                                <p class="page-list-text">повышение позиций сайта в поисковой выдаче;</p>
-                            </div>
-                            <div class="page-list-item">
-                                <p class="page-list-number">2</p>
-                                <p class="page-list-text">привлечение целевого трафика;</p>
-                            </div>
-                            <div class="page-list-item">
-                                <p class="page-list-number">3</p>
-                                <p class="page-list-text">снижение количества отказов, которые плохо сказываются на поведенческих факторах; </p>
-                            </div>
-                            <div class="page-list-item">
-                                <p class="page-list-number">4</p>
-                                <p class="page-list-text">рост конверсии и продаж. </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <a name="seo"></a>
-                <div class="optimization-content-main">
-                    <div class="content-main-optimization">
-                        <img class="optimization-logo" src="img/optimization/logo-icon.svg" alt="logo-icon"/>
-                        <p class="main-optimization-title">SEO-заполнение карточки товара</p>
-                    </div>
-
-                    <p class="page-description-text">Для продвижения в топ интернет-магазина придется шаг за шагом причесывать каждый элемент всех товарных страниц. Мы составили чек-лист «Как оптимизировать карточку товара» из 20 пунктов, реализуя которые, вы постепенно выведете свой магазин в топ поисковой выдачи.</p>
-
-                    <div class="optimization-quotes">
-                        <img class="optimization-quotes-img" src="img/optimization/quotes.svg" alt="quotes"/>
-                        <span class="optimization-quotes-text">Призыв к действию — название товара — бренд — особые характеристики — название магазина.</span>
-                    </div>
-
-                    <p class="page-description-text">Например: «Купить стиральную машину активаторного типа “Малютка” с отжимом — ТД “Прачка”».</p>
-                    <p class="page-description-text">Description — краткое описание товара для поисковой системы. Этот небольшой текст часто подтягивается в сниппет в качестве представления страницы. Здесь тоже нужно использовать ключевые слова, добавить преимущества, информацию о доставке и гарантиях, цену, призыв к действию. Description должен быть информативным и полезным для потенциального покупателя.</p>
-                    <p class="page-description-text">Заголовок первого уровня H1 — это название товарной карточки, которое пользователь видит на интернет-странице. Заголовок H1 не должен совпадать с Title: это теги для разных задач. Если Title в первую очередь, для робота, то H1 — для людей. Чтобы живого пользователя не отвернуло от вашего сайта с первых секунд, делайте заголовки H1 ориентированными на человека. Убирайте топорные формулировки со словами «купить», «заказать» и оставляйте полное название товара.</p>
-                    <p class="page-description-text">В оптимизации мета-тегов главное не переусердствовать с ключами.</p>
-                </div>
-
-                <a class="optimization-back-href" href="blog.html">
-                    <button class="optimization-back">Вернуться назад <span class="optimization-back-btnVector">  &gt;</span></button>
-                </a>
             </div>
         </div>
 
-
-        <div class="optimization-articles">
-            <div class="optimization-articles-cont container">
-                <p class="page-title">Похожие статьи</p>
-                <div class="optimization-articles-gallery">
-                    <div class="blog-content-item">
-                        <img class="blog-content-img" src="img/blog/discount.png" alt="discount"/>
-                        <div class="blog-content-label">
-                            <p class="blog-content-text">Все дороги ведут в онлайн. Скидка 15% на готовые решения</p>
-                            <p class="blog-content-data">30 июля 2022</p>
-                        </div>
-                    </div>
-                    <div class="blog-content-item">
-                        <img class="blog-content-img" src="img/blog/tenchat.png" alt="tenchat"/>
-                        <div class="blog-content-label">
-                            <p class="blog-content-text">Что за социальная сеть этот ваш TenChat?</p>
-                            <p class="blog-content-data">29 июля 2022</p>
-                        </div>
-                    </div>
-                    <div class="blog-content-item">
-                        <img class="blog-content-img" src="img/blog/upgrade.png" alt="upgrade"/>
-                        <div class="blog-content-label">
-                            <p class="blog-content-text">5 новинок из Идейного Центра — большой апгрейд</p>
-                            <p class="blog-content-data">28 июля 2022</p>
-                        </div>
-                    </div>
-                    <div class="blog-content-item">
-                        <img class="blog-content-img" src="img/blog/gift.png" alt="gift"/>
-                        <div class="blog-content-label">
-                            <p class="blog-content-text">1=3. Аудит маркетинга и аналитика бизнес-процессов в подарок к любой услуге</p>
-                            <p class="blog-content-data">1 августа 2022</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @@include('html/optimization/optimization-articles.html',{})
 
     </section>
 </main>
