Project: set up this paje on files

--- a/src/html/optimization/optimization-articles.html
+++ b/src/html/optimization/optimization-articles.html
@@ -3,13 +3,13 @@
     <p class="page-title">Похожие статьи</p>
     <div class="optimization-articles-gallery">
 
-      @@include('html/blog/blog-content-item-discount.html',{})
+      @@include('../blog/blog-content-item-discount.html',{})
 
-      @@include('html/blog/blog-content-item-tenchat.html',{})
+      @@include('../blog/blog-content-item-tenchat.html',{})
 
-      @@include('html/blog/blog-content-item-upgrade.html',{})
+      @@include('../blog/blog-content-item-upgrade.html',{})
 
-      @@include('html/blog/blog-content-item-gift.html',{})
+      @@include('../blog/blog-content-item-gift.html',{})
 
     </div>
   </div>
