--- a/src/html/all-pages/pageCases.html
+++ b/src/html/all-pages/pageCases.html
@@ -8,16 +8,7 @@
         <img class="swiper-slide cases-gallery-item" src='../../img/development/Frame%20106.png'/>
       </div>
     </div>
-    <div class="page-cases-swiper">
-      <div class="swiper-arrows">
-        <div class="swiper-arrow swiper-arrow-prev">
-          <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-        </div>
-        <div class="swiper-arrow swiper-arrow-next">
-          <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-        </div>
-      </div>
-      <span class="page-look"><a class="page-look-href" href="../../cases.html">Смотреть все</a></span>
-    </div>
+
+    @@include('page-cases-swiper.html',{})
   </div>
 </div>
