--- a/src/project.html
+++ b/src/project.html
@@ -21,81 +21,17 @@
     <section class="project">
         <div class="project-cont container">
 
-            <div class="project-content">
-
-                <img class="project-logo" src="img/cases/logo5.png" alt="logo5"/>
-                <p class="project-content-text">Сайт разработан в дополнение к основному сайту клиники для выделения такого важного направления как “Хирургическое лечение катаракты”.</p>
-
-                <div class="project-content-adaptation">
-                    <div class="content-adaptation-block">
-                        <p class="content-adaptation-title">Адаптация</p>
-                        <p class="content-adaptation-text">Дизайн и верстка проекта адаптивные и правильно выглядит на любом устройстве</p>
-                    </div>
-                    <img class="content-adaptation-img" src="img/surgery/monitor.png" alt="monitor"/>
-                </div>
-
-                <div class="project-content-result">
-                    <p class="content-result-title">Результат</p>
-                    <div class="content-result-block">
-                        <div class="result-block-item">
-                            <p class="result-block-title">40 часов</p>
-                            <p class="result-block-text">Разработка дизайна</p>
-                        </div>
-                        <div class="result-block-item">
-                            <p class="result-block-title">38 часов</p>
-                            <p class="result-block-text">Верстка проекта</p>
-                        </div>
-                        <div class="result-block-item">
-                            <p class="result-block-title">75 часов</p>
-                            <p class="result-block-text">Программирование</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            @@include('html/project/project-first-screen.html',{})
 
             <div class="project-aside">
-                <aside class="project-info">
-                    <div class="project-info-item">
-                        <p class="info-item-title">Ссылка:</p>
-                        <a class="info-item-text">https://cataracta.center/</a>
-                    </div>
-                    <div class="project-info-item">
-                        <p class="info-item-title">Год:</p>
-                        <span class="info-item-text">2022</span>
-                    </div>
-                    <div class="project-info-item">
-                        <p class="info-item-title">Затрачено рабочих часов:</p>
-                        <span class="info-item-text">123</span>
-                    </div>
-                    <div class="project-info-item">
-                        <p class="info-item-title">Время на разработку:</p>
-                        <span class="info-item-text">45 дней</span>
-                    </div>
-                </aside>
-
+                @@include('html/project/project-info.html',{})
                 @@include('html/all-pages/connectionBlock.html',{})
             </div>
 
         </div>
-
     </section>
 
-    <div class="project-screen container">
-        <img class="project-img" src="img/surgery/cataract.png" alt="cataract"/>
-
-        <div class="page-cases-swiper">
-            <div class="swiper-arrows">
-                <div class="swiper-arrow swiper-arrow-prev">
-                    <img class="svg-arrow-slider" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-                </div>
-                <div class="swiper-arrow swiper-arrow-next">
-                    <img class="svg-arrow-slider svg-arrow-sliderNext" src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
-                </div>
-            </div>
-            <span class="page-look"><a class="page-look-href" href="cases.html">Смотреть все</a></span>
-        </div>
-    </div>
-
+    @@include('html/project/project-third-screen.html',{})
 
 </main>
 
