Specialists: set up this page on files

--- a/src/specialists.html
+++ b/src/specialists.html
@@ -24,60 +24,8 @@
 
             <div class="specialists-content">
 
-                <div class="specialists-content-titleBlock">
-                    <p class="specialists-content-title">Программисты</p>
-                    <img class="specialists-content-img" src="@img/icons/icons.svg#lineGrey" alt="line"/>
-                </div>
-
-
-                <div class="content-gallery">
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Дарья Андреевна Лобан</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist1.png" alt="specialist1"/>
-                    </div>
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Валерия Юрьевна Цветкова</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist2.png" alt="specialist2"/>
-                    </div>
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Павел Александрович Прусак</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist3.png" alt="specialist3"/>
-                    </div>
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Иван Алексеевич Незнамокавов</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist4.png" alt="specialist4"/>
-                    </div>
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Валерия Юрьевна Цветкова</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist2.png" alt="specialist2"/>
-                    </div>
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Дарья Андреевна Лобан</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist1.png" alt="specialist1"/>
-                    </div>
-                </div>
-
-                <div class="specialists-content-titleBlock">
-                    <p class="specialists-content-title">Дизайнеры</p>
-                    <img class="specialists-content-img" src="@img/icons/icons.svg#lineGrey" alt="line"/>
-                </div>
-
-
-                <div class="content-gallery">
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Дарья Андреевна Лобан</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist1.png" alt="specialist1"/>
-                    </div>
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Валерия Юрьевна Цветкова</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist2.png" alt="specialist2"/>
-                    </div>
-                    <div class="content-gallery-item">
-                        <p class="gallery-item-name">Павел Александрович Прусак</p>
-                        <img class="gallery-item-img" src="img/specialists/specialist3.png" alt="specialist3"/>
-                    </div>
-
-                </div>
+                @@include('html/specialists/specialists-first-screen.html',{})
+                @@include('html/specialists/specialists-second-screen.html',{})
 
             </div>
 
@@ -85,9 +33,7 @@
 
         </div>
 
-
         @@include('html/all-pages/connectionBlock.html',{})
-
 
     </section>
 </main>
