Mobile: made adaptive design in this page, but be continued

--- a/src/html/mobile/mobile-eighth-screen.html
+++ b/src/html/mobile/mobile-eighth-screen.html
@@ -1,8 +1,8 @@
 <div class="content-item">
   <div class="content-item-cont container">
 
-    <img class="item-block-num item-block-num-left" src="img/mobile/number7.png" alt="number7"/>
-    <div class="item-block-cont item-block-contLeft">
+    <img class="item-block-num item-block-num7 item-block-num-left" src="img/mobile/number7.png" alt="number7"/>
+    <div class="item-block-cont item-block-cont7 item-block-contLeft">
       <p class="item-block-title">Тестирование</p>
       <p class="item-block-text">Качественное и современное тестирование - это верный путь к запуску действительно качественного продукта</p>
     </div>
