--- a/src/html/mobile/mobile-fifth-screen.html
+++ b/src/html/mobile/mobile-fifth-screen.html
@@ -1,10 +1,10 @@
-<div class="content-item">
+<div class="content-item content-item4">
   <div class="content-item-cont container">
 
     <img class="content-item-img content-item-img-games4" src="img/mobile/games4.png" alt="games4"/>
     <img class="content-item-imgBgd content-item-imgBgd4 content-item-imgBgd-left" src="img/mobile/mobile-bgd-img.png" alt="bgd"/>
 
-    <div class="item-block-num-blockright">
+    <div class="item-block-num-blockright item-block-num-blockright4">
       <img class="item-block-num item-block-num4 item-block-num-right" src="img/mobile/number4.png" alt="number4"/>
     </div>
 
