--- a/src/html/mobile/mobile-fourth-screen.html
+++ b/src/html/mobile/mobile-fourth-screen.html
@@ -1,7 +1,7 @@
 <div class="content-item">
   <div class="content-item-cont container">
 
-    <img class="item-block-num item-block-num-left" src="img/mobile/number3.png" alt="number3"/>
+    <img class="item-block-num item-block-num3 item-block-num-left" src="img/mobile/number3.png" alt="number3"/>
 
     <div class="item-block-cont item-block-contLeft">
       <p class="item-block-title">Среда разработки</p>
