--- a/src/html/mobile/mobile-second-screen.html
+++ b/src/html/mobile/mobile-second-screen.html
@@ -3,9 +3,9 @@
 <div class="content-item">
   <div class="content-item-cont container">
 
-    <img class="item-block-num item-block-num-left" src="img/mobile/number1.png" alt="number1"/>
+    <img class="item-block-num item-block-num1 item-block-num-left" src="img/mobile/number1.png" alt="number1"/>
 
-    <div class="item-block-cont item-block-contLeft">
+    <div class="item-block-cont item-block-cont1 item-block-contLeft">
       <p class="item-block-title">Рождение идеи</p>
       <p class="item-block-text">Проводится маркетинговый и бизнес-анализ с целью выявления целесообразности разработки</p>
     </div>
