--- a/src/html/mobile/mobile-third-screen.html
+++ b/src/html/mobile/mobile-third-screen.html
@@ -1,4 +1,4 @@
-<div class="content-item">
+<div class="content-item content-item2">
   <div class="content-item-cont container">
 
     <img class="content-item-img content-item-img-games2" src="img/mobile/games2.png" alt="games2"/>
