--- a/src/html/mobile/mobile-sixth-screen.html
+++ b/src/html/mobile/mobile-sixth-screen.html
@@ -1,7 +1,7 @@
 <div class="content-item">
   <div class="content-item-cont container">
 
-    <img class="item-block-num item-block-num-left" src="img/mobile/number5.png" alt="number5"/>
+    <img class="item-block-num item-block-num5 item-block-num-left" src="img/mobile/number5.png" alt="number5"/>
 
     <div class="item-block-cont item-block-contLeft">
       <p class="item-block-title">Выбор платформы</p>
