About: made adaptive design in this page

--- a/src/html/about/about-first-screen.html
+++ b/src/html/about/about-first-screen.html
@@ -8,7 +8,7 @@
         </svg>
         <p class="about-bluText">Viatekmedia - упрощаем процессы вашего бизнеса, повышаем качество</p>
       </div>
-      <p class="about-text">Каждый из вас имеет свою организацию бизнеса. Именно поэтому команда «ТехноИнновация» ищет, изучает и выбирает для вас подходящие решения, которые прекрасно вписываются в ваши бизнес-процессы и автоматизируют их. Ведь вы понимаете и разделяете нашу страсть в выборе исключительно качественных продуктов и решений.</p>
+      <p class="about-text about-text1">Каждый из вас имеет свою организацию бизнеса. Именно поэтому команда «ТехноИнновация» ищет, изучает и выбирает для вас подходящие решения, которые прекрасно вписываются в ваши бизнес-процессы и автоматизируют их. Ведь вы понимаете и разделяете нашу страсть в выборе исключительно качественных продуктов и решений.</p>
     </div>
   </div>
 </div>
