corrected arrows in all pages. Corrected position imgMen on different with screen in page CRM-implement

--- a/src/html/all-pages/feedback-form.html
+++ b/src/html/all-pages/feedback-form.html
@@ -4,7 +4,7 @@
       Так же вы можете связаться с нами с помощью формы обратной связи
     </p>
     <div class="feedback-arrow">
-      <img src="@img/icons/icons.svg#arrowWhite" alt="arrow" />
+      <img src="@img/icons/icons.svg#arrow-slider" alt="arrow" />
     </div>
     <form class="feedback-form">
       <h3 class="feedback-form-title">Напишите нам</h3>
